Fixed bug with img always one behind

--- a/hcs-client/src/components/settings/appSettings.scss
+++ b/hcs-client/src/components/settings/appSettings.scss
@@ -27,9 +27,23 @@
       font-size: 1.2em;
       padding: 10px 20px 10px 20px;
       margin: 10px;
-      border: 1px solid black;
-      border-radius: 20px;
       cursor: pointer;
+      border: 1px solid gray;
+      outline: none;
+      border-radius: 20px;
+
+      &.disabled {
+        border: 1px solid #999999;
+        background-color: #cccccc;
+        color: #666666;
+        border: none;
+        outline: none;
+      }
+    }
+
+    .speed-btn:active {
+      border: none;
+      outline: none;
     }
   }
 
